--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
+    "mariadb": "^3.0.0",
     "qs": "^6.10.3",
     "sqlite3": "^5.0.2"
   }
